public/examples/errors/gop_file_while_true.gop
<!go

for {
	fmt.Println("hello world")
}

